# revenue-intelligence-platform

./: .env.example  .gitignore  Dockerfile  Dockerfile.streamlit  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.py
.streamlit/: config.toml
dashboard/: app.py
data/: generator.py
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: dashboard.yml  fraud_dashboard.json
scripts/: evaluate.py  generate_data.py  train.py
src/: config.py
src/analytics/: churn_prediction.py  cohort_analysis.py  revenue_forecast.py  rfm_analysis.py
src/api/: main.py
src/dashboard/: app.py
src/dashboard/components/: styles.py
src/data_generation/: synthetic_data.py
src/features/: engineering.py
src/models/: database.py  ensemble.py  explainer.py  trainer.py
src/models/mart/: 01_mart_customer_360.sql  02_mart_cohort_analysis.sql  03_mart_revenue_summary.sql
src/models/staging/: 01_stg_customers.sql  02_stg_subscriptions.sql  03_stg_transactions.sql  04_stg_product_events.sql
src/monitoring/: drift.py
tests/: test_analytics.py  test_api.py  test_data_generation.py  test_features.py  test_models.py
